--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ p {
     filter: brightness(1.3);
     height: 240px;
     object-fit: cover;
-    position: relative;
     width: 100%;
 }
 
@@ -94,6 +93,7 @@ p {
 }
 
 .card__title {
+    color: var(--color-heading);
     font-size: 2.8rem;
     font-weight: 700;
     line-height: 3.2rem;
@@ -116,6 +116,7 @@ p {
 }
 
 .text-big {
+    color: var(--color-heading);
     display: inline-block;
     font-size: 2.4rem;
     font-weight: 700;
@@ -130,4 +131,37 @@ p {
     flex-direction: column;
     letter-spacing: 2px;
     margin-bottom: 3rem;
+}
+
+@media screen and (min-width: 1440px) {
+    .card {
+        display: flex;
+        flex-direction: row-reverse;
+        margin: 0 2.4rem;
+        overflow: hidden;
+    }
+
+    .card__title {
+        font-size: 3.6rem;
+        line-height: 4.4rem;
+    }
+
+    .card__img-background {
+        border-top-left-radius: 0;
+        border-bottom-right-radius: var(--radius-8);
+        border-top-right-radius: var(--radius-8);
+        height: auto;
+    }
+
+    .card__content {
+        padding: 8rem 8rem 4rem 8rem;
+        text-align: left;
+    }
+
+    .stats {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 7rem;
+        padding-right: 8rem;
+    }
 }
