--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ p {
     display: inline-block;
     font-size: 2.4rem;
     font-weight: 700;
+    letter-spacing: 0.5px;
     padding-bottom: 1rem;
     text-transform: none;
 }
@@ -138,6 +139,7 @@ p {
         display: flex;
         flex-direction: row-reverse;
         margin: 0 2.4rem;
+        max-width: 100%;
         overflow: hidden;
     }
 
@@ -162,6 +164,6 @@ p {
         display: flex;
         justify-content: space-between;
         margin-top: 7rem;
-        padding-right: 8rem;
+        padding-right: 7.5rem;
     }
 }
